fixed issue on small screens menu elements would overlap with navbar image

--- a/open_fmri/assets/css/styles.css
+++ b/open_fmri/assets/css/styles.css
@@ -286,4 +286,9 @@ ol {
         
     .header-block {
         height: auto;
+    }
+    
+    .navbar-brand {
+        float: none;   
+    }
 }
